Added heading to the page index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My Website</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Welcome to our Website</h1>
+    <p>Hello World</p>
     <p>Welcome to our Website</p>
 </body>
 </html>
